Clobber crappy spacing on github logo, and fix header for easy nav

--- a/stylesheets/sass/site.scss
+++ b/stylesheets/sass/site.scss
@@ -4,10 +4,10 @@
 body { margin: 0; padding: 0; background-color: #201e23; background-image: url('/images/wallpaper.png'); }
 a { text-decoration: none; color: inherit; }
 #shell { width: 1200px; -webkit-box-shadow:  0px 0px 15px 0px rgba(0, 0, 0, .4); box-shadow:  0px 0px 15px 0px rgba(0, 0, 0, .4); margin: 0 auto; }
-#showcase { height: 550px; width: 1200px; margin: 0 auto; background-image: url('/images/moonshine_moonlight_back_b.jpg'); background-repeat: no-repeat; background-size: 1200px; background-position: center 36%; 
+#showcase { height: 550px; width: 1200px; padding-top: 60px; margin: 0 auto; background-image: url('/images/moonshine_moonlight_back_b.jpg'); background-repeat: no-repeat; background-size: 1200px; background-position: center 36%; 
   box-shadow:inset 0 0 200px black;
 }
-#top-nav { height: 60px; background-color: rgba(0,0,0,0.4); width: 100%; padding-top: 2px; padding-bottom: 1px;
+#top-nav { height: 60px; background-color: rgba(0,0,0,0.9); width: 100%; padding-top: 2px; padding-bottom: 1px; width: 1200px; position: fixed; z-index: 1000;
   #lineup { margin: 5px 0; border-top: 1px solid #333; border-bottom: 1px solid #333; height: 50px; font-family: 'Arbutus Slab', sans-serif; font-size: 18px;
     #nav-ico { float: left; background-image: url('/images/m_nav_icon.png'); background-repeat: no-repeat; background-position: center; width: 60px; height: 48px; background-fill: contain; margin-right: 20px; 
       border-top: 1px solid black; border-bottom: 1px solid black;    
@@ -19,8 +19,8 @@ a { text-decoration: none; color: inherit; }
       &:hover { color: #bbb; }
     }
     #fork-us { float: right; margin-top: 15px; margin-right: 30px; color: #333; 
-      b { font-weight: normal; margin-top: 2px; text-transform: none; font-family: 'socialicoregular'; font-size: 42px; color: #333; text-shadow: 0 0 1px #000; position: relative; cursor: pointer; 
-        margin-right: 10px; float: left; top: -7px; }
+      b { font-weight: normal; text-transform: none; font-family: 'socialicoregular'; font-size: 42px; color: #333; text-shadow: 0 0 1px #000; position: relative; cursor: pointer; 
+        margin-right: 10px; float: left; top: -7px; line-height: 90%; }
       &:hover { color: #ddd; }
     }
   }
